fix: hide scrollbar, adjust inline printing per category

--- a/src/styles.css
+++ b/src/styles.css
@@ -577,3 +577,12 @@
     z-index: 20;
   }
 }
+
+/* Custom scrollbar hiding */
+.hide-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
